# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

members = [
    "pitsa",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0 WITH AdditionRef-FWM-Exception-1.0.0"
version = "0.0.0"
repository = "https://github.com/mydriatech/pitsa.git"
publish = false

#[profile.dev]
#opt-level = 1
#lto = "thin"
#incremental = true

[profile.release]
opt-level = 3
# https://doc.rust-lang.org/rustc/codegen-options/index.html#strip
#strip = "debuginfo"
strip = "symbols"
# Link time optimizations off->false->thin->fat
lto = "fat"
# No stack unwinding is required -> reduce size of code
panic = 'abort'
# No fast parallel processing to look for addition optimizations
# Saves a MB or so for 20 extra seconds
codegen-units = 1
# For profiling
#debug = 1
# Keep debug!() and trace!()
#debug-logging=true

[workspace.dependencies]

# Cryptographic provider
tyst = { git = "https://github.com/mydriatech/tyst.git", branch = "main" }
tyst_api_rest_health = { git = "https://github.com/mydriatech/tyst.git", branch = "main" }

# PKI utility libraries
upkit_common = { git = "https://github.com/mydriatech/upkit-common.git", branch = "main" }
upkit_leafops = { git = "https://github.com/mydriatech/upkit-leafops.git", branch = "main" }

# Logging
log = { version = "0.4.27", default-features = false, features = ["release_max_level_debug"] }
env_logger = { version = "0.11.1", default-features = false, features = [] }

# Async and concurrency
crossbeam-skiplist = { version = "0.1.3", default-features = true }
